Upgrading the jaxb maven plugin to version 4.0.0 and supporting only jakarta